Fix jumping button

--- a/src/app/stage/small-switch/small-switch.component.scss
+++ b/src/app/stage/small-switch/small-switch.component.scss
@@ -15,6 +15,7 @@
     background: #888;
     height: 47px;
     width: 47px;
+    padding: 0;
     border-radius: 50%;
     border: 0;
     cursor: pointer;
